Finished index.html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<a href="https://github.com/MeliCeb/Proyecto-PWA" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i>
 									</a>
-									<a href="https://main--proyecto-1-pwa.netlify.app/"target="_blank" rel="noopener noreferrer">
+									<a href="https://proyecto-pwa.netlify.app/"target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-laptop"></i>
 									</a>
 								</div>
@@ -148,10 +148,10 @@
 							<div class="overlay">
 								<p>Proyecto 2</p>
 								<div class="iconos-contenedor">
-									<a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+									<a href="https://github.com/MeliCeb/Proyecto-Galaxy" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i>
 									</a>
-									<a href="https://www.freecodecamp.org/espanol/"target="_blank" rel="noopener noreferrer">
+									<a href="https://proyecto-galaxy.netlify.app/"target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-laptop"></i>
 									</a>
 								</div>
