--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 							<div class="overlay">
 								<p>Proyecto 2</p>
 								<div class="iconos-contenedor">
-									<a href="https://github.com/MeliCeb/Proyecto-Galaxy" target="_blank" rel="noopener noreferrer">
+									<a href="https://github.com/MeliCeb/Proyecto-astrofotografia" target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-github"></i>
 									</a>
-									<a href="https://proyecto-galaxy.netlify.app/"target="_blank" rel="noopener noreferrer">
+									<a href="https://proyecto-astrofotografia.netlify.app/"target="_blank" rel="noopener noreferrer">
 										<i class="bi bi-laptop"></i>
 									</a>
 								</div>
